<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp"
    android:background="@drawable/tikkytakkyneww"
    tools:context=".RegisterActivity">




    <com.google.android.material.textfield.TextInputLayout
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_register"
        android:text="@string/create_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#3de0d2"
        android:textColor="#00203f" />

</LinearLayout>